--- a/Construction/ConstructionProject1.html
+++ b/Construction/ConstructionProject1.html
@@ -1,11 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Construction Project</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="../style.css" />
+  </head>
+  <body>
+    <div class="nav">
+      <input type="checkbox" id="nav-check" />
+      <div class="nav-header">
+        <img src="../img/logo.png" />
+      </div>
+
+      <div class="nav-btn">
+        <label for="nav-check">
+          <span></span>
+          <span></span>
+          <span></span>
+        </label>
+      </div>
+
+      <div class="nav-links">
+        <a href="#">Home</a>
+        <a href="about.html">About</a>
+        <a href="#">Career</a>
+      </div>
+    </div>
+
+    <div class="project-main">
+      <div class="project-image">
+        <img src="../img/construction2.jpg" />
+      </div>
+
+      <div class="project-details">
+        <h3>Project Details</h3>
+        <table style="width: 100%">
+          <tr>
+            <th>Project</th>
+            <td>25 Storey High Rise Mixed Commercial</td>
+          </tr>
+          <tr>
+            <th>Value</th>
+            <td>US $ 250 Million</td>
+          </tr>
+          <tr>
+            <th>Location</th>
+            <td>DHA City Karachi</td>
+          </tr>
+          <tr>
+            <th>Start Date</th>
+            <td>September 1st 2024</td>
+          </tr>
+        </table>
+      </div>
+    </div>
+
+    <div class="related-projects">
+      <div><h2>Related Projects</h2></div>
+
+      <div class="card-slider">
+        <a href="Construction/ConstructionProject2.html">
+          <div class="card">
+            <div class="card-img">
+              <img src="../img/construction2.jpg" alt="" />
+            </div>
+            <div class="card-text">
+              <h2>Forestation Initiative</h2>
+            </div>
+          </div>
+        </a>
+        <a href="Construction/ConstructionProject3.html">
+          <div class="card">
+            <div class="card-img">
+              <img src="../img/cosntruction4.jpg" alt="" />
+            </div>
+            <div class="card-text">
+              <h2>KETI Bander Port Revamp</h2>
+            </div>
+          </div>
+        </a>
+        <a href="Construction/ConstructionProject4.html">
+          <div class="card">
+            <div class="card-img">
+              <img src="../img/construction5.jpg" alt="" />
+            </div>
+            <div class="card-text">
+              <h2>Gwadar Port Transit Expansion</h2>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <footer class="footer-distributed">
+      <div class="footer-left">
+        <h3>TTC<span> Group</span></h3>
+
+        <p class="footer-links">
+          <a href="#">Home</a>
+          |
+          <a href="#">About</a>
+          |
+          <a href="#">Careers</a>
+          |
+          <a href="#">Contact</a>
+        </p>
+
+        <p class="footer-company-name">
+          Copyright © 2024 <strong>The Throne Chasers</strong> All rights
+          reserved
+        </p>
+      </div>
+
+      <div class="footer-center">
+        <div>
+          <i class="fa fa-map-marker"></i>
+          <p><span>Blue Area</span> Islamabad</p>
+        </div>
+
+        <div>
+          <i class="fa fa-phone"></i>
+          <p>+92 331 7049267</p>
+        </div>
+        <div>
+          <i class="fa fa-envelope"></i>
+          <p><a href="mailto:xyz@gmail.com">xyz@gmail.com</a></p>
+        </div>
+      </div>
+      <div class="footer-right">
+        <p class="footer-company-about">
+          <span>About the company</span>
+          <strong> The Throne Chasers Group</strong>
+          specializes in government contracting, project investments, shipping,
+          logistics, solar installations, real estate development, and plastic
+          recycling. We also provide expert business consultancy services.
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
