Added: Solar Energy Page

--- a/Construction/ConstructionProject1.html
+++ b/Construction/ConstructionProject1.html
@@ -35,7 +35,7 @@
 
       <div class="project-details">
         <h3>Project Details</h3>
-        <table style="width: 100%">
+        <table >
           <tr>
             <th>Project</th>
             <td>25 Storey High Rise Mixed Commercial</td>
@@ -63,7 +63,7 @@
         <a href="Construction/ConstructionProject2.html">
           <div class="card">
             <div class="card-img">
-              <img src="../img/construction2.jpg" alt="" />
+              <img src="../img/forestation.jpg" alt="" />
             </div>
             <div class="card-text">
               <h2>Forestation Initiative</h2>
@@ -73,7 +73,7 @@
         <a href="Construction/ConstructionProject3.html">
           <div class="card">
             <div class="card-img">
-              <img src="../img/cosntruction4.jpg" alt="" />
+              <img src="../img/port2" alt="" />
             </div>
             <div class="card-text">
               <h2>KETI Bander Port Revamp</h2>
@@ -83,7 +83,7 @@
         <a href="Construction/ConstructionProject4.html">
           <div class="card">
             <div class="card-img">
-              <img src="../img/construction5.jpg" alt="" />
+              <img src="../img/port.png" alt="" />
             </div>
             <div class="card-text">
               <h2>Gwadar Port Transit Expansion</h2>
