--- a/Construction/ConstructionProject2.html
+++ b/Construction/ConstructionProject2.html
@@ -30,7 +30,7 @@
 
     <div class="project-main">
       <div class="project-image">
-        <img src="../img/construction2.jpg" />
+        <img src="../img/forestation.jpg" />
       </div>
 
       <div class="project-details">
@@ -75,17 +75,17 @@
         <a href="Construction/ConstructionProject2.html">
           <div class="card">
             <div class="card-img">
-              <img src="../img/construction2.jpg" alt="" />
+              <img src="../img/construction5.jpg" alt="" />
             </div>
             <div class="card-text">
-              <h2>Forestation Initiative</h2>
+              <h2>25 Story High Rise Mixed Commercial</h2>
             </div>
           </div>
         </a>
         <a href="Construction/ConstructionProject3.html">
           <div class="card">
             <div class="card-img">
-              <img src="../img/cosntruction4.jpg" alt="" />
+              <img src="../img/port2.jpg" alt="" />
             </div>
             <div class="card-text">
               <h2>KETI Bander Port Revamp</h2>
@@ -95,7 +95,7 @@
         <a href="Construction/ConstructionProject4.html">
           <div class="card">
             <div class="card-img">
-              <img src="../img/construction5.jpg" alt="" />
+              <img src="../img/port.png" alt="" />
             </div>
             <div class="card-text">
               <h2>Gwadar Port Transit Expansion</h2>
