--- a/Construction/ConstructionProject3.html
+++ b/Construction/ConstructionProject3.html
@@ -23,14 +23,15 @@
 
       <div class="nav-links">
         <a href="#">Home</a>
-        <a href="about.html">About</a>
+        <a href="../about.html">About</a>
         <a href="#">Career</a>
+        <a href="../construction.html">Construction</a>
       </div>
     </div>
 
     <div class="project-main">
       <div class="project-image">
-        <img src="../img/construction2.jpg" />
+        <img src="../img/port2.jpg" />
       </div>
 
       <div class="project-details">
@@ -74,10 +75,10 @@
       <div><h2>Related Projects</h2></div>
 
       <div class="card-slider">
-        <a href="Construction/ConstructionProject2.html">
+        <a href="Construction/ConstructionProject1">
           <div class="card">
             <div class="card-img">
-              <img src="../img/construction2.jpg" alt="" />
+              <img src="../img/forestation.jpg" alt="" />
             </div>
             <div class="card-text">
               <h2>Forestation Initiative</h2>
@@ -87,17 +88,17 @@
         <a href="Construction/ConstructionProject3.html">
           <div class="card">
             <div class="card-img">
-              <img src="../img/cosntruction4.jpg" alt="" />
+              <img src="../img/construction5.jpg" alt="" />
             </div>
             <div class="card-text">
-              <h2>KETI Bander Port Revamp</h2>
+              <h2>25 Story High Rise Mixed Commercial</h2>
             </div>
           </div>
         </a>
         <a href="Construction/ConstructionProject4.html">
           <div class="card">
             <div class="card-img">
-              <img src="../img/construction5.jpg" alt="" />
+              <img src="../img/port.png" alt="" />
             </div>
             <div class="card-text">
               <h2>Gwadar Port Transit Expansion</h2>
