fix: navbar and url

--- a/Construction/ConstructionProject2.html
+++ b/Construction/ConstructionProject2.html
@@ -72,17 +72,17 @@
       <div><h2>Related Projects</h2></div>
 
       <div class="card-slider">
-        <a href="Construction/ConstructionProject2.html">
+        <a href="ConstructionProject1.html">
           <div class="card">
             <div class="card-img">
-              <img src="../img/construction5.jpg" alt="" />
+              <img src="../img/construction2.jpg" alt="" />
             </div>
             <div class="card-text">
               <h2>25 Story High Rise Mixed Commercial</h2>
             </div>
           </div>
         </a>
-        <a href="Construction/ConstructionProject3.html">
+        <a href="ConstructionProject3.html">
           <div class="card">
             <div class="card-img">
               <img src="../img/port2.jpg" alt="" />
@@ -92,7 +92,7 @@
             </div>
           </div>
         </a>
-        <a href="Construction/ConstructionProject4.html">
+        <a href="ConstructionProject4.html">
           <div class="card">
             <div class="card-img">
               <img src="../img/port.png" alt="" />
