--- a/Construction/ConstructionProject3.html
+++ b/Construction/ConstructionProject3.html
@@ -75,7 +75,7 @@
       <div><h2>Related Projects</h2></div>
 
       <div class="card-slider">
-        <a href="Construction/ConstructionProject1">
+        <a href="ConstructionProject1.html">
           <div class="card">
             <div class="card-img">
               <img src="../img/forestation.jpg" alt="" />
@@ -85,7 +85,7 @@
             </div>
           </div>
         </a>
-        <a href="Construction/ConstructionProject3.html">
+        <a href="ConstructionProject2.html">
           <div class="card">
             <div class="card-img">
               <img src="../img/construction5.jpg" alt="" />
@@ -95,7 +95,7 @@
             </div>
           </div>
         </a>
-        <a href="Construction/ConstructionProject4.html">
+        <a href="ConstructionProject4.html">
           <div class="card">
             <div class="card-img">
               <img src="../img/port.png" alt="" />
