--- a/Construction/ConstructionProject4.html
+++ b/Construction/ConstructionProject4.html
@@ -60,7 +60,7 @@
       <div><h2>Related Projects</h2></div>
 
       <div class="card-slider">
-        <a href="Construction/ConstructionProject2.html">
+        <a href="ConstructionProject2.html">
           <div class="card">
             <div class="card-img">
               <img src="../img/forestation.jpg" alt="" />
@@ -70,7 +70,7 @@
             </div>
           </div>
         </a>
-        <a href="Construction/ConstructionProject3.html">
+        <a href="ConstructionProject3.html">
           <div class="card">
             <div class="card-img">
               <img src="../img/port2.jpg" alt="" />
@@ -80,7 +80,7 @@
             </div>
           </div>
         </a>
-        <a href="Construction/ConstructionProject4.html">
+        <a href="ConstructionProject1.html">
           <div class="card">
             <div class="card-img">
               <img src="../img/construction5.jpg" alt="" />
