--- a/Construction/ConstructionProject1.html
+++ b/Construction/ConstructionProject1.html
@@ -35,7 +35,7 @@
 
       <div class="project-details">
         <h3>Project Details</h3>
-        <table >
+        <table>
           <tr>
             <th>Project</th>
             <td>25 Storey High Rise Mixed Commercial</td>
@@ -60,7 +60,7 @@
       <div><h2>Related Projects</h2></div>
 
       <div class="card-slider">
-        <a href="Construction/ConstructionProject2.html">
+        <a href="ConstructionProject2.html">
           <div class="card">
             <div class="card-img">
               <img src="../img/forestation.jpg" alt="" />
@@ -70,17 +70,17 @@
             </div>
           </div>
         </a>
-        <a href="Construction/ConstructionProject3.html">
+        <a href="ConstructionProject3.html">
           <div class="card">
             <div class="card-img">
-              <img src="../img/port2" alt="" />
+              <img src="../img/port2.jpg" alt="" />
             </div>
             <div class="card-text">
               <h2>KETI Bander Port Revamp</h2>
             </div>
           </div>
         </a>
-        <a href="Construction/ConstructionProject4.html">
+        <a href="ConstructionProject4.html">
           <div class="card">
             <div class="card-img">
               <img src="../img/port.png" alt="" />
