--- a/Construction/index.html
+++ b/Construction/index.html
@@ -6,14 +6,14 @@
     <title>TTC Constructions</title>
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
    
   </head>
   <body>
     <div class="nav">
       <input type="checkbox" id="nav-check" />
       <div class="nav-header">
-        <img src="img/logo.png" />
+        <a href="/"><img src="../img/logo.png" /></a>
       </div>
 
       <div class="nav-btn">
@@ -25,16 +25,20 @@
       </div>
 
       <div class="nav-links">
-        <a href="#">Home</a>
-        <a href="about.html">About</a>
-        <a href="#">Career</a>
+        <a href="/">Home</a>
+        <a href="/about/">About</a>
+        <a href="/Energy/">Energy</a>
+        <a href="/logistics/">Logistics</a>
+        <a href="/contact/">Contact Us</a>
+        
+        <!-- <a href="#">Career</a> -->
       </div>
     </div>
 
     <div class="slider">
       <div class="list">
         <div class="item">
-          <img src="img/construction-workers-sunset.jpg" alt="" />
+          <img src="../img/construction-workers-sunset.jpg" alt="" />
 
           <div class="company-brief">
             <h3>Construction</h3>
@@ -46,7 +50,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="img/construction2.jpg" alt="" />
+          <img src="../img/construction2.jpg" alt="" />
           <div class="company-brief">
             <h3>Construction</h3>
             <p>
@@ -57,7 +61,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="img/construction5.jpg" alt="" />
+          <img src="../img/construction5.jpg" alt="" />
           <div class="company-brief">
             <h3>Construction</h3>
             <p>
@@ -68,7 +72,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="img/cosntruction4.jpg" alt="" />
+          <img src="../img/cosntruction4.jpg" alt="" />
           <div class="company-brief">
             <h3>Construction</h3>
             <p>
@@ -117,7 +121,7 @@
       <div class="expertise-cards">
         <figure class="snip1200">
           <img
-            src="img/construction2.jpg"
+            src="../img/construction2.jpg"
             alt="sq-sample27"
           />
           <figcaption>
@@ -185,41 +189,41 @@
         <button id="previous" class="btn">
           <i class="las la-angle-left"></i>
         </button>
-        <a href="Construction/ConstructionProject1.html">
+        <a href="ConstructionProject1.html">
         <div class="card-content">
           <div class="card">
             <div class="card-img">
-              <img src="img/construction3.jpg" alt="">
+              <img src="../img/construction3.jpg" alt="">
             </div>
             <div class="card-text">
               <h2>25 Storey High Rise Mixed Commercial</h2>
             </div>
           </div>
         </a>
-          <a href="Construction/ConstructionProject2.html">
+          <a href="ConstructionProject2.html">
           <div class="card">
             <div class="card-img">
-              <img src="img/construction2.jpg" alt="">
+              <img src="../img/construction2.jpg" alt="">
                         </div>
             <div class="card-text">
               <h2>Forestation Initiative</h2>
             </div>
           </div>
         </a>
-          <a href="Construction/ConstructionProject3.html">
+          <a href="ConstructionProject3.html">
           <div class="card">
             <div class="card-img">
-              <img src="img/cosntruction4.jpg" alt="">
+              <img src="../img/cosntruction4.jpg" alt="">
             </div>
             <div class="card-text">
               <h2>KETI Bander Port Revamp</h2>
             </div>
           </div>
         </a>
-          <a href="Construction/ConstructionProject4.html">
+          <a href="ConstructionProject4.html">
           <div class="card">
             <div class="card-img">
-              <img src="img/construction5.jpg" alt="">
+              <img src="../img/construction5.jpg" alt="">
                         </div>
             <div class="card-text">
               <h2>Gwadar Port Transit
@@ -264,6 +268,6 @@
 });
 
     </script>
-    <script src="main.js"></script>
+    <script src="../main.js"></script>
   </body>
 </html>
