Added: Changes in navbar

--- a/Careers/index.html
+++ b/Careers/index.html
@@ -25,8 +25,9 @@
           <a href="/">Home</a>
           <a href="/about/">About</a>
           <a href="/Construction/">Construction</a>
+          <a href="/waste-management/">Waste Recycle</a>
           <a href="/Energy/">Energy</a>
-          <a href="/Careers/">Logistics</a>
+          <a href="/logistics/">Logistics</a>
           <a href="/contact/">Contact Us</a>
         </div>
       </div>
