--- a/Construction/ConstructionProject3.html
+++ b/Construction/ConstructionProject3.html
@@ -23,9 +23,12 @@
 
       <div class="nav-links">
         <a href="#">Home</a>
-        <a href="../about.html">About</a>
-        <a href="#">Career</a>
-        <a href="../construction.html">Construction</a>
+        <a href="/about/">About</a>
+        <a href="/logistics/">Logistics</a>
+        <a href="/Construction/">Construction</a>
+        <a href="/waste-management/">Waste Recycle</a>
+        <a href="/Careers/">Careers</a>
+        <a href="/contact/">Contact us</a>
       </div>
     </div>
 
