--- a/Construction/index.html
+++ b/Construction/index.html
@@ -29,6 +29,7 @@
         <a href="/about/">About</a>
         <a href="/Energy/">Energy</a>
         <a href="/logistics/">Logistics</a>
+        <a href="/waste-management/">Waste Recycle</a>
         <a href="/contact/">Contact Us</a>
         
         <a href="/Careers/">Career</a>
