--- a/Energy/index.html
+++ b/Energy/index.html
@@ -27,6 +27,8 @@
         <a href="/logistics/">Logistics</a>
         <a href="/Construction/">Construction</a>
         <a href="/contact/">Contact</a>
+        <a href="/waste-management/">Waste Recycle</a>
+        <a href="/Careers/">Careers</a>
       </div>
     </div>
 
