--- a/about/index.html
+++ b/about/index.html
@@ -37,7 +37,8 @@
         <a href="/Construction/">Construction</a>
         <a href="/logistics/">Logistics</a>
         <a href="/contact/">Contact Us</a>
-
+        <a href="/waste-management/">Waste Recycle</a>
+        <a href="/Careers/">Careers</a>
         <!-- <a href="#">Career</a> -->
       </div>
     </div>
