--- a/waste-management/index.html
+++ b/waste-management/index.html
@@ -4,9 +4,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Waste Recyle</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
-        
+
+    <div class="nav">
+        <input type="checkbox" id="nav-check" />
+        <div class="nav-header">
+          <a href="/"><img src="../img/logo.png" /></a>
+        </div>
+  
+        <div class="nav-btn">
+          <label for="nav-check">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
+        </div>
+  
+        <div class="nav-links">
+          <a href="/">Home</a>
+          <a href="/about/">About</a>
+          <a href="/Energy/">Energy</a>
+          <a href="/logistics/">Logistics</a>
+          <a href="/contact/">Contact Us</a>
+          
+          <a href="/Careers/">Career</a>
+        </div>
+      </div>
+
+      <div class="energy-container">
+        <div class="energy-large">
+          <img src="../img/wasterecycle2.png" />
+          <div class="energy-mid">
+            <div class="energy-ltext">
+              <h1>Waste Recyle</h1>
+              <p>
+                With over 20 years of combined experience in the waste management industry, TTC is well-equipped to serve a wide 
+                range of clients in the recycling sector. We support projects at all stages—from initial conception and design
+                 development to implementation, maintenance, and optimization of existing recycling systems. Our services include
+                  technical advisory, process completion,
+                 and commissioning. TTC has successfully managed and protected recycling projects by developing industry-specific 
+                 methods and tools to monitor, control, and safeguard our clients’ waste recycling processes and infrastructure.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <footer class="footer-distributed">
+        <div class="footer-left">
+          <h3>TTC<span> Group</span></h3>
+  
+          <p class="footer-links">
+            <a href="#">Home</a>
+            |
+            <a href="#">About</a>
+            |
+            <a href="#">Careers</a>
+            |
+            <a href="#">Contact</a>
+          </p>
+  
+          <p class="footer-company-name">
+            Copyright © 2024 <strong>The Throne Chasers</strong> All rights
+            reserved
+          </p>
+        </div>
+  
+        <div class="footer-center">
+          <div>
+            <i class="fa fa-map-marker"></i>
+            <p><span>Blue Area</span> Islamabad</p>
+          </div>
+  
+          <div>
+            <i class="fa fa-phone"></i>
+            <p>+92 331 7049267</p>
+          </div>
+          <div>
+            <i class="fa fa-envelope"></i>
+            <p><a href="mailto:xyz@gmail.com">xyz@gmail.com</a></p>
+          </div>
+        </div>
+        <div class="footer-right">
+          <p class="footer-company-about">
+            <span>About the company</span>
+            <strong> The Throne Chasers Group</strong>
+            specializes in government contracting, project investments, shipping,
+            logistics, solar installations, real estate development, and plastic
+            recycling. We also provide expert business consultancy services.
+          </p>
+        </div>
+      </footer>
 </body>
 </html>
