Added:Media Queries

--- a/Energy/index.html
+++ b/Energy/index.html
@@ -57,7 +57,7 @@
 
     <div class="energy-second-container">
       <div class="second-details-container">
-        <h2>Solar Power System Installation & Commissioning</h2>
+        <h2>Solar Power System <span>Installation & Commissioning</span></h2>
         <p>
           At The Throne Chasers SMC-Private Limited, we are dedicated to driving
           sustainable energy solutions and empowering communities through our
@@ -84,13 +84,17 @@
     </div>
 
     <div class="energy-projects-container">
-      <h2>Solar Projects In Progress</h2>
+      <h1 class="energy-container-heading">Latest <span>Projects</span></h1>
+      <div class="Project-Name">
+        <h1><span>20 MW</span> Solar Power</h1>
+      </div>
       <div class="energy-project">
+        
         <div class="energy-project-image">
           <img src="../img/industrialSolar.jpg" />
         </div>
         <div class="energy-project-details">
-          <table style="width: 100%">
+          <table style="width: 80%">
             <tr>
               <th>Project</th>
               <td>20 MW Solar Power Connectivity Local Grid</td>
@@ -114,9 +118,16 @@
           </table>
         </div>
       </div>
+      <div class="Project-Name">
+        <h1><span>4 MW</span> Solar Power MG Motors</h1>
+      </div>
       <div class="energy-project">
+       
+        <div class="energy-project-image">
+          <img src="../img/comercialsolar.jpeg" />
+        </div>
         <div class="energy-project-details">
-          <table style="width: 100%">
+          <table style="width: 80%">
             <tr>
               <th>Project</th>
               <td>4 MW Solar Power MG Motors Lahore</td>
@@ -138,9 +149,6 @@
               <td>1 Month</td>
             </tr>
           </table>
-        </div>
-        <div class="energy-project-image">
-          <img src="../img/commercialsolar.jpg" />
         </div>
       </div>
     </div>
@@ -177,7 +185,7 @@
         </div>
         <div>
           <i class="fa fa-envelope"></i>
-          <p><a href="mailto:xyz@gmail.com">xyz@gmail.com</a></p>
+          <p><a href="mailto:info@thethronechasers.com">info@thethronechasers.com</a></p>
         </div>
       </div>
       <div class="footer-right">
