--- a/Construction/index.html
+++ b/Construction/index.html
@@ -122,8 +122,8 @@
       <div class="expertise-cards">
         <figure class="snip1200">
           <img
-            src="../img/construction2.jpg"
-            alt="sq-sample27"
+            src="../img/expertise.webp"
+            alt=""
           />
           <figcaption>
             <p>
@@ -137,7 +137,7 @@
         </figure>
         <figure class="snip1200 ">
           <img
-            src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample31.jpg"
+            src="/img/assistance.jpg"
             alt="sq-sample31"
           />
           <figcaption>
@@ -152,7 +152,7 @@
         </figure>
         <figure class="snip1200">
           <img
-            src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample32.jpg"
+            src="/img/o&m.jpeg"
             alt="sq-sample32"
           />
           <figcaption>
@@ -167,7 +167,7 @@
         </figure>
         <figure class="snip1200">
           <img
-            src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample32.jpg"
+            src="/img/maintenance.webp"
             alt="sq-sample32"
           />
           <figcaption>
@@ -204,7 +204,7 @@
           <a href="ConstructionProject2.html">
           <div class="card">
             <div class="card-img">
-              <img src="../img/construction2.jpg" alt="">
+              <img src="../img/forestation.jpg" alt="">
                         </div>
             <div class="card-text">
               <h2>Forestation Initiative</h2>
@@ -214,7 +214,7 @@
           <a href="ConstructionProject3.html">
           <div class="card">
             <div class="card-img">
-              <img src="../img/cosntruction4.jpg" alt="">
+              <img src="../img/port2.jpg" alt="">
             </div>
             <div class="card-text">
               <h2>KETI Bander Port Revamp</h2>
@@ -224,7 +224,7 @@
           <a href="ConstructionProject4.html">
           <div class="card">
             <div class="card-img">
-              <img src="../img/construction5.jpg" alt="">
+              <img src="../img/port.png" alt="">
                         </div>
             <div class="card-text">
               <h2>Gwadar Port Transit
