--- a/logistics/index.html
+++ b/logistics/index.html
@@ -70,7 +70,7 @@
             Efficiency in Motion: Delivering Your World, Every Mile of the Way.
           </p>
         </div>
-        <a href="contactus.html">
+        <a href="/contact/">
           <div class="custom-solution">Custom Solutions</div>
         </a>
       </div>
@@ -141,23 +141,23 @@
     </div>
 
     <div
-      class="freight-forwarding-main"
+      class="warehouse-main"
       data-aos="fade-up-left"
       data-aos-duration="1500"
     >
       <div
-        class="freight-forwarding-image"
+        class="warehouse-image"
         data-aos="fade-right"
         data-aos-duration="1000"
       >
         <img src="../img/warehouse.jpeg" />
       </div>
       <div
-        class="freight-forwarding-details"
+        class="warehouse-details"
         data-aos="fade-left"
         data-aos-duration="1000"
       >
-        <div class="freight-forwarding-text">
+        <div class="warehouse-text">
           <h2>Warehousing & Distribution</h2>
           <p>
             TTC offers efficient warehousing and distribution services tailored
