--- a/Careers/index.html
+++ b/Careers/index.html
@@ -72,48 +72,50 @@
 
 
 
-      <footer class="footer-distributed">
-
+    <footer class="footer-distributed">
         <div class="footer-left">
-            <h3>TTC<span> Group</span></h3>
-
-            <p class="footer-links">
-                <a href="#">Home</a>
-                |
-                <a href="#">About</a>
-                |
-                <a href="#">Careers</a>
-                |
-                <a href="#">Contact</a>
-            </p>
-
-            <p class="footer-company-name">Copyright © 2024 <strong>The Throne Chasers</strong> All rights reserved</p>
+          <h3>TTC<span> Group</span></h3>
+  
+          <p class="footer-links">
+            <a href="/">Home</a>
+            |
+            <a href="/about/">About</a>
+            |
+            <a href="/Careers/">Careers</a>
+            |
+            <a href="/contact/">Contact</a>
+          </p>
+  
+          <p class="footer-company-name">
+            Copyright © 2024 <strong>The Throne Chasers</strong> All rights
+            reserved
+          </p>
         </div>
-
+  
         <div class="footer-center">
-            <div>
-                <i class="fa fa-map-marker"></i>
-                <p><span>Blue Area</span>
-                    Islamabad</p>
-            </div>
-
-            <div>
-                <i class="fa fa-phone"></i>
-                <p>+92 331 7049267</p>
-            </div>
-            <div>
-                <i class="fa fa-envelope"></i>
-                <p><a href="mailto:xyz@gmail.com">xyz@gmail.com</a></p>
-            </div>
+          <div>
+            <i class="fa fa-map-marker"></i>
+            <p><span>Blue Area</span> Islamabad</p>
+          </div>
+  
+          <div>
+            <i class="fa fa-phone"></i>
+            <p>+92 331 7049267</p>
+          </div>
+          <div>
+            <i class="fa fa-envelope"></i>
+            <p><a href="mailto:xyz@gmail.com">xyz@gmail.com</a></p>
+          </div>
         </div>
         <div class="footer-right">
-            <p class="footer-company-about">
-                <span>About the company</span>
-                <strong> The Throne Chasers Group</strong>
-                specializes in government contracting, project investments, shipping, logistics, solar installations, real estate development, and plastic recycling. We also provide expert business consultancy services.
-            </p>
-           
+          <p class="footer-company-about">
+            <span>About the company</span>
+            <strong> The Throne Chasers Group</strong>
+            specializes in government contracting, project investments, shipping,
+            logistics, solar installations, real estate development, and plastic
+            recycling. We also provide expert business consultancy services.
+          </p>
         </div>
-    </footer>
+      </footer>
 </body>
 </html>
