--- a/Construction/ConstructionProject3.html
+++ b/Construction/ConstructionProject3.html
@@ -116,13 +116,13 @@
         <h3>TTC<span> Group</span></h3>
 
         <p class="footer-links">
-          <a href="#">Home</a>
+          <a href="/">Home</a>
           |
-          <a href="#">About</a>
+          <a href="/about/">About</a>
           |
-          <a href="#">Careers</a>
+          <a href="/Careers/">Careers</a>
           |
-          <a href="#">Contact</a>
+          <a href="/contact/">Contact</a>
         </p>
 
         <p class="footer-company-name">
