--- a/Energy/index.html
+++ b/Energy/index.html
@@ -158,13 +158,13 @@
         <h3>TTC<span> Group</span></h3>
 
         <p class="footer-links">
-          <a href="#">Home</a>
+          <a href="/">Home</a>
           |
-          <a href="#">About</a>
+          <a href="/about/">About</a>
           |
-          <a href="#">Careers</a>
+          <a href="/Careers/">Careers</a>
           |
-          <a href="#">Contact</a>
+          <a href="/contact/">Contact</a>
         </p>
 
         <p class="footer-company-name">
@@ -185,7 +185,7 @@
         </div>
         <div>
           <i class="fa fa-envelope"></i>
-          <p><a href="mailto:info@thethronechasers.com">info@thethronechasers.com</a></p>
+          <p><a href="mailto:xyz@gmail.com">xyz@gmail.com</a></p>
         </div>
       </div>
       <div class="footer-right">
