--- a/about/index.html
+++ b/about/index.html
@@ -17,31 +17,31 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
   </head>
   <body>
-    <div class="nav">
-      <input type="checkbox" id="nav-check" />
-      <div class="nav-header">
-        <a href="/"><img src="../img/logo.png" /></a>
+    <nav class="navbar">
+      <div class="navbar-logo">
+          <a href="/"><img src="../img/logo.png" alt="Logo"></a>
       </div>
-
-      <div class="nav-btn">
-        <label for="nav-check">
+      <input type="checkbox" id="navbar-toggle">
+      <label for="navbar-toggle" class="navbar-toggle-label">
           <span></span>
           <span></span>
           <span></span>
-        </label>
+      </label>
+      <div class="navbar-links">
+          <a href="/">Home</a>
+          <div class="dropdown">
+            <a href="#" class="dropdown-toggle">Services</a>
+            <div class="dropdown-menu">
+                <a href="/Construction/">Construction</a>
+                <a href="/Energy/">Energy</a>
+                <a href="/logistics/">Logistics</a>
+                <a href="/waste-management/">Waste Recycle</a>
+            </div>
+        </div>
+          <a href="/contact/">Contact Us</a>
+          
       </div>
-
-      <div class="nav-links">
-        <a href="/">Home</a>
-        <a href="/Energy/">Energy</a>
-        <a href="/Construction/">Construction</a>
-        <a href="/logistics/">Logistics</a>
-        <a href="/contact/">Contact Us</a>
-        <a href="/waste-management/">Waste Recycle</a>
-        <a href="/Careers/">Careers</a>
-        <!-- <a href="#">Career</a> -->
-      </div>
-    </div>
+  </nav>
 
     <div class="about-container">
       <div class="about-l">
@@ -69,16 +69,7 @@
                 <h3>Vision</h3>
                 <p>
                   Creating, constructing, and delivering adaptable, integrated,
-                  toptier, and cost-efficient solutions.in all fields with
-                  exceptional customer service.
-                </p>
-              </div>
-              <div class="hexagon">
-                <h3>Mission</h3>
-                <p>
-                  Being acknowledged as the foremost authority in all fields
-                  with exceptional customer service.in all fields with
-                  exceptional customer service.in all fields with exceptional.
+                  toptier, and cost-efficient solutions.
                 </p>
               </div>
               <div class="hexagon">
@@ -89,6 +80,14 @@
                   adaptability, and customer satisfaction.
                 </p>
               </div>
+              <div class="hexagon">
+                <h3>Mission</h3>
+                <p>
+                  Being the leading authority in all fields, delivering exceptional
+                   and customer-focused services with integrity.
+                </p>
+              </div>
+              
             </div>
           </div>
         </div>
