Added: Flags According to client

--- a/index.html
+++ b/index.html
@@ -103,12 +103,7 @@
         <button id="prev"><</button>
         <button id="next">></button>
       </div>
-      <!-- <ul class="dots">
-          <li class="active"></li>
-          <li></li>
-          <li></li>
-          <li></li>
-      </ul> -->
+     
     </div>
 
     <!-- Flag Slider -->
@@ -120,7 +115,7 @@
             <img src="img/pakistan.png" height="80" width="150" alt="" />
           </div>
           <div class="slide">
-            <img src="img/india.png" height="80" width="150" alt="" />
+            <img src="img/malaysia.avif" height="80" width="150" alt="" />
           </div>
           <div class="slide">
             <img src="img/china.png" height="80" width="150" alt="" />
@@ -132,31 +127,46 @@
             <img src="img/russia.png" height="80" width="150" alt="" />
           </div>
           <div class="slide">
-            <img src="img/india.png" height="80" width="150" alt="" />
+            <img src="img/indonesia.avif" height="80" width="150" alt="" />
           </div>
           <div class="slide">
-            <img src="img/america.png" height="80" width="150" alt="" />
+            <img src="img/belgium.png" height="80" width="150" alt="" />
           </div>
           <div class="slide">
-            <img src="img/china.png" height="80" width="150" alt="" />
+            <img src="img/france.png" height="80" width="150" alt="" />
           </div>
           <div class="slide">
-            <img src="img/india.png" height="80" width="150" alt="" />
+            <img src="img/vietnam.png" height="80" width="150" alt="" />
           </div>
           <div class="slide">
-            <img src="img/pakistan.png" height="80" width="150" alt="" />
+            <img src="img/thailand.avif" height="80" width="150" alt="" />
           </div>
           <div class="slide">
-            <img src="img/russia.png" height="80" width="150" alt="" />
+            <img src="img/srilanka.png" height="80" width="150" alt="" />
           </div>
           <div class="slide">
-            <img src="img/america.png" height="80" width="150" alt="" />
+            <img src="img/singapore.png" height="80" width="150" alt="" />
           </div>
           <div class="slide">
-            <img src="img/china.png" height="80" width="150" alt="" />
+            <img src="img/denmark.png" height="80" width="150" alt="" />
           </div>
           <div class="slide">
-            <img src="img/pakistan.png" height="80" width="150" alt="" />
+            <img src="img/turkey.avif" height="80" width="150" alt="" />
+          </div>
+          <div class="slide">
+            <img src="img/germany.png" height="80" width="150" alt="" />
+          </div>
+          <div class="slide">
+            <img src="img/southkorea.png" height="80" width="150" alt="" />
+          </div>
+          <div class="slide">
+            <img src="img/australia.avif" height="80" width="150" alt="" />
+          </div>
+          <div class="slide">
+            <img src="img/iran.png" height="80" width="150" alt="" />
+          </div>
+          <div class="slide">
+            <img src="img/iraq.png" height="80" width="150" alt="" />
           </div>
         </div>
       </div>
