Added: International Trade Page

--- a/index.html
+++ b/index.html
@@ -42,20 +42,19 @@
           <div class="dropdown">
               <a href="#" class="dropdown-toggle">Businesses</a>
               <div class="dropdown-menu">
-                  <a href="/Construction/">Construction</a>
-                  <a href="/Energy/">Energy</a>
-                  <a href="/logistics/">Logistics</a>
-                  <a href="/waste-management/">Waste Recycle</a>
+                  <a href="/Construction/">International Trade</a>
+                  <a href="/Energy/">Engineering Solutions</a>
+                  <a href="/logistics/">Design & Consultancy Expertise</a>
               </div>
           </div>
           <div class="dropdown">
               <a href="#" class="dropdown-toggle">Our Projects</a>
-              <div class="dropdown-menu">
+              <!-- <div class="dropdown-menu">
                   <a href="/Construction/">Construction</a>
                   <a href="/Energy/">Energy</a>
                   <a href="/logistics/">Logistics</a>
                   <a href="/waste-management/">Waste Recycle</a>
-              </div>
+              </div> -->
           </div>
           <div class="dropdown">
               <a href="#" class="dropdown-toggle">Media</a>
@@ -63,7 +62,6 @@
                   <a href="/Construction/">Blog</a>
                   <a href="/Energy/">News</a>
                   <a href="/logistics/">Updates</a>
-                  <a href="/waste-management/">Waste Recycle</a>
               </div>
           </div>
           
