--- a/index.html
+++ b/index.html
@@ -30,31 +30,33 @@
       </label>
       <div class="navbar-links">
           
-          <div class="dropdown">
+          <!-- <div class="dropdown">
               <a href="#" class="dropdown-toggle">Services</a>
               <div class="dropdown-menu">
                   <a href="/Construction/">Construction</a>
                   <a href="/Energy/">Energy</a>
                   <a href="/logistics/">Logistics</a>
-                  <a href="/waste-management/">Waste Recycle</a>
               </div>
-          </div>
+          </div> -->
           <div class="dropdown">
               <a href="#" class="dropdown-toggle">Businesses</a>
               <div class="dropdown-menu">
                   <a href="/Construction/">International Trade</a>
+                  <a href="/logistics/">Logistics</a>
+                  <a href="/Construction/">Construction</a>
                   <a href="/Energy/">Engineering Solutions</a>
+                  <a href="/Energy/">Energy</a>
                   <a href="/logistics/">Design & Consultancy Expertise</a>
               </div>
           </div>
           <div class="dropdown">
               <a href="#" class="dropdown-toggle">Our Projects</a>
-              <!-- <div class="dropdown-menu">
-                  <a href="/Construction/">Construction</a>
-                  <a href="/Energy/">Energy</a>
-                  <a href="/logistics/">Logistics</a>
-                  <a href="/waste-management/">Waste Recycle</a>
-              </div> -->
+              <div class="dropdown-menu">
+                  <a href="/Construction/ConstructionProject1.html">High Rise</a>
+                  <a href="/Construction/ConstructionProject2.html">Forestation</a>
+                  <a href="/Construction/ConstructionProject3.html">KETI Bander</a>
+                  <a href="/Construction/ConstructionProject4.html">Gwadar Port</a>
+              </div>
           </div>
           <div class="dropdown">
               <a href="#" class="dropdown-toggle">Media</a>
