--- a/Energy/index.html
+++ b/Energy/index.html
@@ -112,7 +112,7 @@
       </div>
     </div>
 
-    <div class="energy-projects-container">
+    <div class="energy-projects-container" id="20MW">
       <h1 class="energy-container-heading">Latest <span>Projects</span></h1>
       <div class="Project-Name">
         <h1><span>20 MW</span> Solar Power</h1>
@@ -147,7 +147,7 @@
           </table>
         </div>
       </div>
-      <div class="Project-Name">
+      <div class="Project-Name" id="4MW">
         <h1><span>4 MW</span> Solar Power MG Motors</h1>
       </div>
       <div class="energy-project">
