--- a/about/index.html
+++ b/about/index.html
@@ -93,14 +93,14 @@
           </div>
           <div class="hexagon-container">
             <div class="hexagon-container">
-              <div class="hexagon">
+              <div class="hexagon" id="vision">
                 <h3>Vision</h3>
                 <p>
                   Creating, constructing, and delivering adaptable, integrated,
                   toptier, and cost-efficient solutions.
                 </p>
               </div>
-              <div class="hexagon">
+              <div class="hexagon" id="value">
                 <h3>Value</h3>
                 <p>
                   Delivering exceptional, integrated, and cost-efficient
@@ -108,7 +108,7 @@
                   adaptability, and customer satisfaction.
                 </p>
               </div>
-              <div class="hexagon">
+              <div class="hexagon" id="mission">
                 <h3>Mission</h3>
                 <p>
                   Being the leading authority in all fields, delivering exceptional
