--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                   <a href="/Construction/ConstructionProject2.html">Forestation</a>
                   <a href="/Construction/ConstructionProject3.html">KETI Bander</a>
                   <a href="/Construction/ConstructionProject4.html">Gwadar Port</a>
+                  <a href="/Energy/#20MW">20MW Solar</a>
+                  <a href="/Energy/#4MW">4MW Solar</a>
+
               </div>
           </div>
           <div class="dropdown">
@@ -66,9 +69,16 @@
                   <a href="/logistics/">Updates</a>
               </div>
           </div>
-          
+          <div class="dropdown">
+            <a href="/about/" class="dropdown-toggle">About</a>
+            <div class="dropdown-menu">
+                <a href="/about/#vision">Vision</a>
+                <a href="/about/#Mision">Mission</a>
+                <a href="/about/#value">Core Values</a>
+            </div>
+        </div>
           <a href="/Team/">Our Team</a>
-          <a href="/about/">About</a>
+          
       </div>
   </nav>
 
