Changed:Navbar links

--- a/Team/index.html
+++ b/Team/index.html
@@ -39,12 +39,12 @@
         <div class="dropdown">
             <a href="#" class="dropdown-toggle">Businesses</a>
             <div class="dropdown-menu">
-                <a href="/Construction/">International Trade</a>
+                <a href="/International Trade/">International Trade</a>
                 <a href="/logistics/">Logistics</a>
                 <a href="/Construction/">Construction</a>
-                <a href="/Energy/">Engineering Solutions</a>
+                <a href="/Construction/#EngineeringProjects">Engineering Solutions</a>
                 <a href="/Energy/">Energy</a>
-                <a href="/logistics/">Design & Consultancy Expertise</a>
+                <a href="/DesignConsultancy&solution/">Design & Consultancy Expertise</a>
             </div>
         </div>
         <div class="dropdown">
