Added: Freight in Logistics

--- a/logistics/index.html
+++ b/logistics/index.html
@@ -168,16 +168,15 @@
         </div>
       </div>
     </div>
+    
+
+
 
     <div
       class="freight-forwarding-main"
-      data-aos="flip-left"
-      data-aos-duration="2000"
     >
       <div
         class="freight-forwarding-details"
-        data-aos="fade-right"
-        data-aos-duration="1000"
       >
         <div class="freight-forwarding-text">
           <h2>Freight Forwarding</h2>
@@ -192,29 +191,41 @@
       </div>
       <div
         class="freight-forwarding-image"
-        data-aos="fade-left"
-        data-aos-duration="1000"
       >
         <img src="../img/freight-forwarding.jpeg" />
       </div>
     </div>
 
+    <div class="freight-forwarding-bottom">
+      <div class="freight-red freight-box">
+        <i class="fa-solid fa-plane"></i>
+        <p>Air Freight</p>
+      </div>
+      <div class="freight-black freight-box">
+        <i class="fa-solid fa-ship"></i>
+        <p>Ocean Freight</p>
+      </div>
+      <div class="freight-red freight-box">
+        <i class="fa-solid fa-truck"></i>
+        <p>Land Transport</p>
+      </div>
+      <div class="freight-black freight-box">
+        <i class="fa-solid fa-train"></i>
+        <p>Cargo Rail</p>
+      </div>
+    </div>
+    
+
     <div
       class="warehouse-main"
-      data-aos="fade-up-left"
-      data-aos-duration="1500"
     >
       <div
         class="warehouse-image"
-        data-aos="fade-right"
-        data-aos-duration="1000"
       >
         <img src="../img/warehouse.jpeg" />
       </div>
       <div
         class="warehouse-details"
-        data-aos="fade-left"
-        data-aos-duration="1000"
       >
         <div class="warehouse-text">
           <h2>Warehousing & Distribution</h2>
@@ -232,13 +243,9 @@
 
     <div
       class="freight-forwarding-main"
-      data-aos="fade-up-right"
-      data-aos-duration="1500"
     >
       <div
         class="freight-forwarding-details"
-        data-aos="fade-right"
-        data-aos-duration="1000"
       >
         <div class="freight-forwarding-text">
           <h2>Custom Clearance</h2>
@@ -251,8 +258,6 @@
       </div>
       <div
         class="freight-forwarding-image"
-        data-aos="fade-left"
-        data-aos-duration="1000"
       >
         <img src="../img/customs.jpg" />
       </div>
@@ -260,20 +265,14 @@
 
     <div
       class="warehouse-main"
-      data-aos="fade-up-left"
-      data-aos-duration="1500"
     >
       <div
         class="warehouse-image"
-        data-aos="fade-right"
-        data-aos-duration="1000"
       >
         <img src="../img/port2.jpg" />
       </div>
       <div
         class="warehouse-details"
-        data-aos="fade-left"
-        data-aos-duration="1000"
       >
         <div class="warehouse-text">
           <h2>CSR</h2>
