--- a/International Trade/index.html
+++ b/International Trade/index.html
@@ -192,19 +192,19 @@
         <div class="footer-links">
             <h4>Quick Links</h4>
             <ul>
-                <li><a href="../">Home</a></li>
+                <li><a href="../">Company</a></li>
                 <li><a href="../Careers/index.html">Careers</a></li>
-                <li><a href="/contact">Contact Us</a></li>
+                <li><a href="../contact/">Contact Us</a></li>
             </ul>
         </div>
         <div class="footer-business">
             <h4>Business</h4>
             <ul>
-                <li><a href="/automobile">Constrution</a></li>
-                <li><a href="/auto-parts">Logistics</a></li>
-                <li><a href="/building-materials">International Trade</a></li>
-                <li><a href="/energy">Energy</a></li>
-                <li><a href="/packaging">Waste Management</a></li>
+                <li><a href="../Construction/">Constrution</a></li>
+                <li><a href="../logistics/">Logistics</a></li>
+                <li><a href="../International Trade/">International Trade</a></li>
+                <li><a href="../Energy/">Energy</a></li>
+                <li><a href="../waste-management/">Waste Management</a></li>
             </ul>
         </div>
         <div class="footer-contact">
