--- a/Careers/index.html
+++ b/Careers/index.html
@@ -75,7 +75,44 @@
         </div>
     </nav>
 
-
+    <div class="careers-wrapper">
+        <div class="careers-header">Careers</div>
+        <div class="form-wrapper-unique">
+            <div class="form-container-unique">
+                <h2 class="form-title-unique">APPLICATION FORM</h2>
+                <form action="#" method="post">
+                    <div class="form-row-unique">
+                        <div class="form-group-unique">
+                            <label for="first-name" class="label-unique">First Name</label>
+                            <input type="text" id="first-name" name="first-name" placeholder="First Name" required class="input-unique">
+                        </div>
+                        <div class="form-group-unique">
+                            <label for="last-name" class="label-unique">Last Name</label>
+                            <input type="text" id="last-name" name="last-name" placeholder="Last Name" required class="input-unique">
+                        </div>
+                    </div>
+                    <div class="form-row-unique">
+                        <div class="form-group-unique">
+                            <label for="email" class="label-unique">Email <span class="required-unique">*</span></label>
+                            <input type="email" id="email" name="email" placeholder="Email" required class="input-unique">
+                        </div>
+                        <div class="form-group-unique">
+                            <label for="phone" class="label-unique">Phone</label>
+                            <input type="tel" id="phone" name="phone" placeholder="Phone" class="input-unique">
+                        </div>
+                    </div>
+                    <div class="form-group-unique">
+                        <label for="resume" class="label-unique">Resume <span class="required-unique">*</span></label>
+                        <input type="file" id="resume" name="resume" required class="input-unique">
+                    </div>
+                    <div class="form-submit-unique">
+                        <button type="submit" class="button-unique">Send</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+  
+      </div>
 
     <footer class="footer-container">
         
@@ -88,17 +125,17 @@
             <ul>
                 <li><a href="../">Company</a></li>
                 <li><a href="../Careers/index.html">Careers</a></li>
-                <li><a href="/contact">Contact Us</a></li>
+                <li><a href="../contact/">Contact Us</a></li>
             </ul>
         </div>
         <div class="footer-business">
             <h4>Business</h4>
             <ul>
-                <li><a href="/automobile">Constrution</a></li>
-                <li><a href="/auto-parts">Logistics</a></li>
-                <li><a href="/building-materials">International Trade</a></li>
-                <li><a href="/energy">Energy</a></li>
-                <li><a href="/packaging">Waste Management</a></li>
+                <li><a href="../Construction/">Constrution</a></li>
+                <li><a href="../logistics/">Logistics</a></li>
+                <li><a href="../International Trade/">International Trade</a></li>
+                <li><a href="../Energy/">Energy</a></li>
+                <li><a href="../waste-management/">Waste Management</a></li>
             </ul>
         </div>
         <div class="footer-contact">
