--- a/index.html
+++ b/index.html
@@ -212,12 +212,9 @@
 
     <!-- Counter -->
     <div id="custom-counter">
+      
       <div class="custom-items">
-        <h1 class="custom-count" data-number="50"></h1>
-        <h3 class="text">National Awards</h3>
-      </div>
-      <div class="custom-items">
-        <h1 class="custom-count" data-number="20"></h1>
+        <h1 class="custom-count" data-number="5"></h1>
         <h3 class="text">year+ Experience</h3>
       </div>
       <div class="custom-items">
@@ -308,17 +305,17 @@
           <ul>
               <li><a href="../">Company</a></li>
               <li><a href="../Careers/index.html">Careers</a></li>
-              <li><a href="/contact">Contact Us</a></li>
+              <li><a href="../contact/">Contact Us</a></li>
           </ul>
       </div>
       <div class="footer-business">
           <h4>Business</h4>
           <ul>
-              <li><a href="/automobile">Constrution</a></li>
-              <li><a href="/auto-parts">Logistics</a></li>
-              <li><a href="/building-materials">International Trade</a></li>
-              <li><a href="/energy">Energy</a></li>
-              <li><a href="/packaging">Waste Management</a></li>
+              <li><a href="../Construction/">Constrution</a></li>
+              <li><a href="../logistics/">Logistics</a></li>
+              <li><a href="../International Trade/">International Trade</a></li>
+              <li><a href="../Energy/">Energy</a></li>
+              <li><a href="../waste-management/">Waste Management</a></li>
           </ul>
       </div>
       <div class="footer-contact">
