--- a/Energy/index.html
+++ b/Energy/index.html
@@ -68,9 +68,10 @@
                 <a href="/about/#vision">Vision</a>
                 <a href="/about/#Mision">Mission</a>
                 <a href="/about/#value">Core Values</a>
+                <a href="../Team/">Team</a>
             </div>
         </div>
-          <a href="/Team/">Our Team</a>
+          <a href="/Team/" class="disabled"></a>
           
       </div>
   </nav>
