--- a/Energy/index.html
+++ b/Energy/index.html
@@ -83,16 +83,7 @@
           <div class="energy-ltext">
             <h1>Energy</h1>
             <p>
-              With over 20 years of combined experience in the building services
-              industry, TTC is well-equipped to serve a wide range of clients in
-              the solar energy sector. We support projects at all stages—from
-              initial conception and design development to construction,
-              maintenance, and optimization of existing solar energy systems.
-              Our services include technical advisory, mechanical completion,
-              and commissioning. TTC has successfully managed and protected
-              solar energy projects by developing industry-specific methods and
-              tools to monitor, control, and safeguard our clients’ solar
-              installations and infrastructure.
+              Since 2017, TTC has been well-equipped to serve a wide range of clients in the solar energy sector. We support projects at all stages—from initial conception and design development to construction, maintenance, and optimization of existing solar energy systems. Our services include technical advisory, mechanical completion, and commissioning. TTC has successfully managed and protected solar energy projects by developing industry-specific methods and tools to monitor, control, and safeguard our clients’ solar installations and infrastructure.
             </p>
           </div>
         </div>
