Fixed Card Styles

--- a/Energy/index.html
+++ b/Energy/index.html
@@ -132,7 +132,7 @@
       </div>
     </div>
 
-    <div class="energy-projects-container" id="20MW">
+    <!-- <div class="energy-projects-container" id="20MW">
       <h1 class="energy-container-heading">Latest <span>Projects</span></h1>
       <div class="Project-Name">
         <h1><span>20 MW</span> Solar Power</h1>
@@ -200,7 +200,39 @@
           </table>
         </div>
       </div>
-    </div>
+    </div> -->
+    <div class="energy-horizontal-card-container">
+      <!-- 20 MW Project Horizontal Card -->
+      <div class="energy-horizontal-card">
+          <div class="energy-horizontal-card-image">
+              <img src="../img/industrialSolar.jpg" alt="20 MW Solar Project">
+          </div>
+          <div class="energy-horizontal-card-content">
+              <span class="energy-horizontal-card-date">Start Date: 31 August 2024</span>
+              <h2 class="energy-horizontal-card-title">20 MW Solar Power Connectivity Local Grid</h2>
+              <p>Value: US $8.0 Million</p>
+              <p>Location: DHA City Karachi</p>
+              <p>Timeline: 4-6 Months</p>
+          </div>
+      </div>
+  
+      <!-- 4 MW Project Horizontal Card -->
+      <div class="energy-horizontal-card">
+          <div class="energy-horizontal-card-image">
+              <img src="../img/comercialsolar.jpeg" alt="4 MW Solar Project">
+          </div>
+          <div class="energy-horizontal-card-content">
+              <span class="energy-horizontal-card-date">Start Date: 15 August 2024</span>
+              <h2 class="energy-horizontal-card-title">4 MW Solar Power MG Motors Lahore</h2>
+              <p>Value: US $1.2 Million</p>
+              <p>Location: Raiwind Road, Lahore</p>
+              <p>Timeline: 1 Month</p>
+          </div>
+      </div>
+  </div>
+  
+  
+
 
     <footer class="footer-container">
         
