Added: Required CEO message's Page

--- a/CEO Message/index.html
+++ b/CEO Message/index.html
@@ -3,15 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Waste Recyle</title>
+    <title>CEO's MESSAGE</title>
     <link rel="stylesheet" href="../style.css" />
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-  />
 </head>
 <body>
-
     <nav class="navbar">
         <div class="navbar-logo">
             <a href="/"><img src="../img/logo.png" alt="Logo"></a>
@@ -90,27 +85,36 @@
             
         </div>
     </nav>
-
-      <div class="energy-container">
-        <div class="energy-large">
-          <img src="../img/wasterecycle2.png" />
-          <div class="energy-mid">
-            <div class="energy-ltext">
-              <h1>Waste Recyle</h1>
-              <p>
-                With over 20 years of combined experience in the waste management industry, TTC is well-equipped to serve a wide 
-                range of clients in the recycling sector. We support projects at all stages—from initial conception and design
-                 development to implementation, maintenance, and optimization of existing recycling systems. Our services include
-                  technical advisory, process completion,
-                 and commissioning. TTC has successfully managed and protected recycling projects by developing industry-specific 
-                 methods and tools to monitor, control, and safeguard our clients’ waste recycling processes and infrastructure.
-              </p>
+    <div class="ceo-container">
+        <h2 class="ceo-container-heading">CEO's  MESSAGE</h2>
+        <div class="ceo-inner-container">
+          <div class="ceo-wrapper">
+            <div class="ceo-image">
+              <img src="../img/ceoimage.jpg" alt="CEO Image">
+            </div>
+            <div class="ceo-text">
+              <p>As the CEO of TTC Group of Companies, I extend my deepest
+                gratitude to our exceptional team whose dedication and hard
+                work drive our company's success. Together, we navigate
+                challenges, celebrate triumphs, and embrace growth
+                opportunities.</p>
+               <p>Our vision from day one has been to innovate, disrupt, and
+                create positive impact globally. Today, I am proud to see us
+                not only meeting but exceeding these goals. Our achievements
+                are a testament to each individual's contributions, from
+                innovative minds shaping our offerings to the relentless
+                dedication of our support staff.</p> 
+               <p> Let's remain committed to excellence, pushing boundaries,
+                and striving for greatness together. Thank you for your
+                unwavering passion; together, we will continue to make a
+                difference.</p>
+              <h4>Regards</h4>
+              <h3>Mr. Mohammad Zohaib Khan</h3>
             </div>
           </div>
-        </div>
-      </div>
-
-      <footer class="footer-container">
+    </div>
+    </div>
+    <footer class="footer-container">
         
         <div class="footer-logo">
             <img src="../img/logo.png" alt="Company Logo">
