--- a/Team/index.html
+++ b/Team/index.html
@@ -86,8 +86,8 @@
           <div class="dropdown-menu">
               <a href="/about/#vision">Vision</a>
               <a href="/about/#Mision">Mission</a>
-              <a href="/about/#value">Core Values</a>
-              <a href="../Team/">Team</a>
+              <a href="/CEO Message/">CEO Message</a>
+              <a href="../Team/">Our Team</a>
           </div>
       </div>
         <a href="/Team/" class="disabled"></a>
@@ -100,7 +100,7 @@
         <div class="contact-text">Our Team</div>
     </div>
 
-    <div class="ceo-container">
+    <!-- <div class="ceo-container">
         <h2 class="ceo-container-heading">CEO's  MESSAGE</h2>
         <div class="ceo-inner-container">
           <div class="ceo-wrapper">
@@ -127,8 +127,8 @@
               <h3>Mr. Mohammad Zohaib Khan</h3>
             </div>
           </div>
-    </div>
-</div>
+    </div> -->
+
 
 
 
@@ -154,7 +154,7 @@
           <img src="../img/port.png"  alt="Team Member 2">
         </div>
         <h2 class="core-team-name">Aizaz Pervaiz </h2>
-        <p class="core-team-description">Project Director</p>
+        <p class="core-team-description">Project Directors</p>
       </div>
   
      
