--- a/HowToInvest/index.html
+++ b/HowToInvest/index.html
@@ -82,8 +82,8 @@
               <div class="dropdown-menu">
                   <a href="/about/#vision">Vision</a>
                   <a href="/about/#Mision">Mission</a>
-                  <a href="/about/#value">Core Values</a>
-                  <a href="../Team/">Team</a>
+                  <a href="/CEO Message/">CEO Message</a>
+                  <a href="../Team/">Our Team</a>
               </div>
           </div>
             <a href="/Team/" class="disabled"></a>
