--- a/CEO Message/index.html
+++ b/CEO Message/index.html
@@ -43,7 +43,7 @@
               <div class="dropdown-menu">
                   <div class="dropdown-submenu">
                       <a href="#" class="dropdown-toggle-right">Completed Projects</a>
-                      <div class="dropdown-menu-right">
+                      <div class="dropdown-menu-left">
                           <a href="../Energy/#20MW"> Solar Energy 
                           </a>
                           <a href="/Construction/#EngineeringProjects">Construction </a>
@@ -51,7 +51,7 @@
                   </div>
                   <div class="dropdown-submenu">
                       <a href="#" class="dropdown-toggle-right">Projects In Progress</a>
-                      <div class="dropdown-menu-right">
+                      <div class="dropdown-menu-left">
                           <a href="../Energy/#20MW">20 MW DHA City Karachi  
                           </a>
                           <a href="/Construction/ConstructionProject3.html">Keti Bander Port Development </a>
