--- a/about/index.html
+++ b/about/index.html
@@ -121,7 +121,7 @@
               <li><a href="/about/#Mision" class="menu-link">Mission</a></li>
               <li><a href="/about/#vision" class="menu-link">Vision</a></li>
               <li><a href="/CEO Message/" class="menu-link">CEO Message</a></li>
-              <li><a href="../Team/" class="menu-link">Our Team</a></li>
+               <!-- <li><a href="../Team/" class="menu-link">Our Team</a></li> -->
               <li><a href="/#affiliation" class="menu-link">Affiliations</a></li>
             </ul>
           </li>
